objects/APTS_ABB_LP_Thwarted_Agreement__c.object
<CustomObject>
    <description>Unlucky Agreement those are failed to load in sap.</description>
    <fields>
        <fullName>APTS_Agreement_Status__c</fullName>
        <label>Agreement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Block_Parameter__c</fullName>
        <label>Block Parameter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Cron_Job_Id__c</fullName>
        <label>Cron Job Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Job_execution_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of times Job executed</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Object_Id__c</fullName>
        <label>Object Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Thwarted Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Failed</fullName>
        <columns>NAME</columns>
        <columns>APTS_Object_Id__c</columns>
        <columns>APTS_Job_execution_Count__c</columns>
        <columns>APTS_Agreement_Status__c</columns>
        <columns>APTS_Block_Parameter__c</columns>
        <columns>APTS_Cron_Job_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Agreement_Status__c</field>
            <operation>equals</operation>
            <value>Failure</value>
        </filters>
        <label>Failed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Successful</fullName>
        <columns>NAME</columns>
        <columns>APTS_Object_Id__c</columns>
        <columns>APTS_Block_Parameter__c</columns>
        <columns>APTS_Agreement_Status__c</columns>
        <columns>APTS_Cron_Job_Id__c</columns>
        <columns>APTS_Job_execution_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Agreement_Status__c</field>
            <operation>equals</operation>
            <value>Success</value>
        </filters>
        <label>Successful</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AGMT-{00000000}</displayFormat>
        <label>Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Thwarted Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>